--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
         "firebase/php-jwt": "^3.0.0",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "symfony/css-selector": "^6.0",
+        "symfony/event-dispatcher": "^6.0",
+        "symfony/string": "^6.0",
+        "symfony/yaml": "^6.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
